# YADROTestTask

./: CMakeLists.txt  README.md  cfg.h  configure  main.cpp  test.cc
.github/workflows/: test-build.yml  ubuntu-build-test.yml  windows-build-test.yml
Datatype/Abstract/: Optional.cpp  Optional.h
Datatype/CellItem/: CellItem.cpp
Datatype/TableHeader/: ColumnHeader.cpp  Header.cpp  RowHeader.cpp
Exception/: EmptyDataException.cpp  EmptyDataException.h  FileNotPermittedException.cpp  FileNotPermittedException.h  InvalidCellAddressException.cpp  InvalidCellAddressException.h  InvalidCellTreeException.cpp  InvalidCellTreeException.h  InvalidDataPatternException.cpp  InvalidDataPatternException.h  InvalidOperatorException.cpp  InvalidOperatorException.h  SelfReferenceException.cpp  SelfReferenceException.h  UnknownException.cpp  UnknownException.h  ZeroDivisionException.cpp  ZeroDivisionException.h
Service/IOReader/File/: FileReader.cpp
Service/IOReader/StringArray/: StringArrayReader.cpp
Service/Table/: Table.cpp  TableExecutor.cpp
TestData/Data/: TestData1.csv  TestData2.csv
TestData/DataSize/: BigTable.csv  EmptyCols.csv  InequalSize1.csv  InequalSize2.csv
TestData/Logic/: DirectSelfReference.csv  IndirectSelfReference2.csv
TestData/WrongInput/: WrongCellValue.csv  WrongCellsAmount.csv  WrongHeader2.csv  WrongOperator.csv
